# mpdknotifier

./: AUTHORS  CMakeLists.txt  INSTALL  NEWS  README  THANKS  TODO  mpdknotifier.notifyrc  mpdknotifierrc-sample
src/: main.cpp  main.h  notifier.cpp  notifier.h
